--- a/Project/package.json
+++ b/Project/package.json
@@ -1,10 +1,10 @@
 {
   "name": "Project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.5",
     "multer": "^1.4.3"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
