--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
