--- a/Project/package.json
+++ b/Project/package.json
@@ -18,8 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "multer": "^1.4.3",
-    "socket.io": "2.1.1"
+    "socket.io": "^2.1.1"
   },
-  "devDependencies": {"nodemon": "1.18.4"},
+  "devDependencies": {
+    "nodemon": "1.18.4"
+  },
   "description": ""
 }
