--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -19,6 +19,7 @@
     "reactstrap": "^8.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
