--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -15,11 +15,11 @@
     "react-animated-bg": "^1.1.2",
     "react-animation": "^1.2.2",
     "react-dom": "^17.0.2",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^2.1.0"
+    "semantic-ui-react": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^2.1.0"
   }
 }
