--- a/Project/client/package.json
+++ b/Project/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "jss-rtl": "^0.3.0",
     "react": "^17.0.2",
     "react-animated": "^0.1.0",
     "react-animated-bg": "^1.1.2",
